# learning-wasi

./: .gitignore  CMakeLists.txt  Makefile  README.md  add.ll  add.s  add.wasm  anyref.wasm  exception.wasm  multivalue.wasm
compose-example/: Cargo.toml  Makefile  README.md  config.yml
compose-example/runner/: Cargo.toml
compose-example/runner/src/: main.rs
compose-example/src/: lib.rs
compose-example/static-eval/: Cargo.toml  policy.dog
compose-example/static-eval/src/: lib.rs
compose-example/wit/: wasmcomponent.wit
notes/: binary-format.md  component-model-wat.md  component-model.md  component-module.md  seedwing.md  uvwasi.md  wasi-nn.md  wasm.md  wasmtime-component-wasi-issue.md  wasmtime.md  wat.md  wit-bindgen.md
python-example/: Cargo.toml
python-wasi-example/: Cargo.toml  Makefile  README.md  build.rs
python-wasi-example/src/: lib.rs
reqwest-wasi-example/: Cargo.toml  README.md  server.js
reqwest-wasi-example/src/: main.rs
src/: add.c  add.js  add.wat  anyref.js  anyref.wat  args_get.wat  environ_get.wat  environ_sizes_get.wat  exception.js  exception.wat  fd_write.wat  first.c  first.cc  inspect-mem.wat  mem-from-js.js  mem-from-js.wat  mem.js  mem.wat  multivalue.js  multivalue.wat  read_arg.wat  readdir.c  readdir.js  tee.js  tee.wat
wasi-example/: Cargo.toml  file.txt  hello.wat  host-func.wat
wasi-example/src/: host-func.rs  main-wasi.rs  main.rs
wasi-example/wasi-module/: Cargo.toml
wasi-example/wasi-module/src/: main.rs
wasm-bindgen/greet/: .gitignore  Cargo.toml  README.md  index.js  webpack.config.js
wasm-encoder-example/: .gitignore  Cargo.toml
wasm-encoder-example/src/: main.rs
wasmtime-example/go/: Makefile  README.md  example.go  go.mod  go.sum
wasmtime-example/wasm-component/: .gitignore  Cargo.toml  Makefile
wasmtime-example/wasm-component/src/: lib.rs
wasmtime-example/wasm-component/wit/: wasmcomponent.wit
wasmtime-example/wasmtime/: Cargo.toml
wasmtime-example/wasmtime/src/: linker.rs  wasi-module.rs  wasi-working.rs  wasi.rs  wasm.rs
wiggle/wasi_snapshot_preview1/: Cargo.toml
wiggle/wasi_snapshot_preview1/src/: main.rs
wit-bindgen-example/: .gitignore  Cargo.toml  Makefile  README.md  component.rs  example.wit  wasi_preview1_component_adapter.wasm
wit-bindgen-example/java/: Makefile  README.md  pom.xml
wit-bindgen-example/java/src/main/java/: Main.java
wit-bindgen-example/java/src/main/java/com/: Wasmtime.java
wit-bindgen-example/java/src/main/java/com/danbev/app/: App.java  ComponentWorld.java  ComponentWorldImpl.java
wit-bindgen-example/java/src/test/java/com/danbev/app/: AppTest.java
wit-bindgen-example/js/: README.md  index.mjs  package-lock.json  package.json
wit-bindgen-example/python/: Makefile  README.md  example.py
wit-bindgen-example/rust/: Cargo.toml
wit-bindgen-example/rust/src/: main.rs
wit-bindgen-example/src/: component.rs  lib.rs
wit-bindgen-example/wit/: component.wit
