[package]
name = "reqwest-wasi-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest_wasi = { version = "0.11.15", features = ["json"] }
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
