[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = { version = "10.0.1", features = ["component-model"] }
wasi-common = "10.0.1"
wasmtime-wasi = { version = "10.0.1", features = ["preview1-on-preview2", "tokio", "sync"]}
tokio = { version = "1", features = ["full"] }
wat = "1.0.66"

wasm-gen = "0.1"
wasmparser = "0.107.0"


[[bin]]
name = "main"
path = "src/main.rs"
