[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b", features = ["component-model"] }
wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping"}
tokio = { version = "1", features = ["full"] }


[[bin]]
name = "wasm"
path = "src/wasm.rs"


[[bin]]
name = "wasi"
path = "src/wasi.rs"

[[bin]]
name = "wasi-working"
path = "src/wasi-working.rs"

[[bin]]
name = "wasi-module"
path = "src/wasi-module.rs"

[[bin]]
name = "linker"
path = "src/linker.rs"
