[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasmtime", features = ["component-model"] }
wasi-common = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi-common"}
wasmtime-wasi = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi", features = ["preview1-on-preview2", "tokio", "sync"]}
tokio = { version = "1", features = ["full"] }
wat = { path = "/home/danielbevenius/work/wasm/wasm-tools/crates/wat" }

[[bin]]
name = "wasm"
path = "src/wasm.rs"


[[bin]]
name = "wasi"
path = "src/wasi.rs"

[[bin]]
name = "linker"
path = "src/linker.rs"
