[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b", features = ["component-model"] }
wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping"}
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"
