[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1", features = ["full"] }

wasmtime = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasmtime", features = ["component-model"] }
wasmtime-wasi = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi", features = ["preview1-on-preview2", "tokio", "sync"]}
wasi-common = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi-common"}

[[bin]]
name = "main"
path = "src/main.rs"
